<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/txtHorasTrabalhadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/horas_trabalhadas"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtDigiteQuantidadeHorasTrabalhadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_n_mero_de_horas_trabalhadas"
        android:inputType="number"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/txtValorPorHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/valor_por_hora"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtDigiteValorPorHora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_valor_por_hora_trabalhada"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/colorBotao"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:text="@string/calcular"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/txtExibeValorCalculado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:textColor="@android:color/background_dark"
        android:textSize="40sp"
        android:textStyle="bold" />

</LinearLayout>